使用中间件做日志拦截记录

--- a/templates/test1.html
+++ b/templates/test1.html
@@ -23,6 +23,19 @@
 			<div class="wp">
 				<div class="module1 eachmod">
 					<div class="right group_list" id="right group_list">
+                        {{bugTrend_bar_charts| safe }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+    <section>
+		<div class="module">
+			<div class="wp">
+				<div class="module1 eachmod">
+					<div class="right group_list" id="right group_list">
                         {{progress_bar_charts| safe }}
 					</div>
 				</div>
