上传图片，把上传的图片加上缩略图

--- a/templates/usercenter-base.html
+++ b/templates/usercenter-base.html
@@ -35,7 +35,7 @@
                         <div class="personal">
                         <dl class="user fr">
                             <dd>{{ user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
-                            <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
+                            <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.thumbnail }}"/></dt>
                         </dl>
                         <div class="userdetail">
                         <dl>
