--- a/templates/index.html
+++ b/templates/index.html
@@ -1,79 +1,100 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block title %}首页{% endblock %}
+{% block title %}zhang_derek首页{% endblock %}
 
 {% block custom_bread %}
 {% endblock %}
 
 {% block content %}
-
+    <div class="banner">
+			<div class="wp">
+				<div class="fl">
+					<div class="imgslide">
+						<ul class="imgs">
+                            {% for banner in all_banners %}
+                            <li>
+                                    <a href="{{ banner.url }}">
+                                        <img width="1200" height="478" src="{{ MEDIA_URL }}{{ banner.image }}" />
+                                    </a>
+                                </li>
+                            {% endfor %}
+						</ul>
+					</div>
+					<div class="unslider-arrow prev"></div>
+					<div class="unslider-arrow next"></div>
+				</div>
+				</div>
+			</div>
 <!--banner end-->
 <!--feature start-->
 	<section>
 		<div class="wp">
 			<ul class="feature">
 				<li class="feature1">
-                    {{liquid_public| safe }}
+					<img class="pic" src="{% static 'images/feature1.png' %}"/>
+					<p class="center">专业权威</p>
 				</li>
 				<li class="feature2">
-                    {{liquid_reproduction| safe }}
+					<img class="pic" src="{% static 'images/feature2.png' %}"/>
+					<p class="center">课程最新</p>
 				</li>
 				<li class="feature3">
-                    {{liquid_fatten| safe }}
+					<img class="pic" src="{% static 'images/feature3.png' %}"/>
+					<p class="center">名师授课</p>
 				</li>
 				<li class="feature4">
-                    {{liquid_purchaseAndsale|safe }}
+					<img class="pic" src="{% static 'images/feature4.png' %}"/>
+					<p class="center">数据真实</p>
 				</li>
 			</ul>
 		</div>
 	</section>
 <!--feature end-->
 <!--module1 start-->
-    <section>
-		<div class="module">
-			<div class="wp">
-				<h1>缺陷情况统计</h1>
-				<div class="module1 eachmod">
-					<div class="right group_list" id="right group_list">
-                        {{two_bar| safe }}
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 	<section>
 		<div class="module">
 			<div class="wp">
-				<h1>云苍穹-公共</h1>
+				<h1>公开课程</h1>
 				<div class="module1 eachmod">
-					<div class="right group_list" id="right group_list">
-                        {{charts_public| safe }}
+					<div class="module1_1 left">
+						<img width="228" height="614" src="{% static 'images/module1_1.jpg' %}"/>
+						<p class="fisrt_word">名师授课<br/>专业权威</p>
+						<a class="more" href="{% url 'course:course_list' %}">查看更多课程 ></a>
 					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-    <section>
-		<div class="module">
-			<div class="wp">
-				<h1>云苍穹-繁殖</h1>
-				<div class="module1 eachmod">
-
 					<div class="right group_list">
-                        {{charts_reproduction| safe }}
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-    	<section>
-		<div class="module">
-			<div class="wp">
-				<h1>云苍穹-育肥</h1>
-				<div class="module1 eachmod">
-
-					<div class="right group_list">
-                        {{charts_fatten| safe }}
+						<div class="module1_2 box">
+							<div class="imgslide2">
+								<ul class="imgs">
+                                    {% for banner_course in banner_courses %}
+                                    <li>
+                                        <a href="{% url 'course:course_detail' banner_course.id %}">
+                                            <img width="470" height="300" src="{{ MEDIA_URL }}{{ banner_course.image }}" />
+                                        </a>
+                                    </li>
+                                    {% endfor %}
+								</ul>
+							</div>
+							<div class="unslider-arrow2 prev"></div>
+							<div class="unslider-arrow2 next"></div>
+						</div>
+                            {% for course in courses %}
+                            <div class="module1_{{ forloop.counter|add:2 }} box">
+                                <a href="{% url 'course:course_detail' course.id %}">
+                                    <img width="233" height="190" src="{{ MEDIA_URL }}{{ course.image }}"/>
+                                </a>
+                                <div class="des">
+                                    <a href="{% url 'course:course_detail' course.id %}">
+                                        <h2 title="django入门">{{ course.name }}</h2>
+                                    </a>
+                                    <span class="fl">难度：<i class="key">{{ course.get_degree_display }}</i></span>
+                                    <span class="fr">学习人数：{{ course.students }}</span>
+                                </div>
+                                <div class="bottom">
+                                    <span class="fl" title="慕课网">{{ course.course_org.name }}</span>
+                                    <span class="star fr">{{ course.fav_nums }}</span>
+                                </div>
+                            </div>
+                            {% endfor %}
 					</div>
 				</div>
 			</div>
@@ -82,11 +103,31 @@
 	<section>
 		<div class="module greybg">
 			<div class="wp">
-				<h1>云苍穹-购销</h1>
+				<h1>课程机构</h1>
 				<div class="module3 eachmod">
-
+					<div class="module3_1 left">
+						<img width="228" height="463" src="/static/images/module3_1.jpg"/>
+						<p class="fisrt_word">名校来袭<br/>权威认证</p>
+						<a class="more" href="{% url 'org:org_list' %}">查看更多机构 ></a>
+					</div>
 					<div class="right">
-                        {{charts_purchaseAndsale|safe }}
+						<ul>
+                                {% for org in course_orgs %}
+                                 <li class="{% if forloop.counter|divisibleby:5 %}five{% endif %}">
+                                    <a href="{% url 'org:org_home' org.id %}">
+                                        <div class="company">
+                                            <img width="184" height="100" src="{{ MEDIA_URL }}{{ org.image }}"/>
+                                            <div class="score">
+                                                <div class="circle">
+                                                    <h2>{{ org.tag }}</h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <p><span class="key" title="{{ org.name }}">{{ org.name }}</span></p>
+                                    </a>
+                                </li>
+                                {% endfor %}
+						</ul>
 					</div>
 				</div>
 			</div>
